Change Footer name

--- a/src/index.html
+++ b/src/index.html
@@ -383,8 +383,8 @@
           <div class="col-md-5 col-sm-5">
             <h1 class="text-light">About Us</h1>
             <p class="text-light">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad,
-              rerum?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Huseyin
+              MEN?
             </p>
             <p class="pt-4 text-light">
               Copyright ©2019 All rights reserved | This template is made with
